[package]
name = "policy-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "MVP Policy validation service with enhanced security"
authors = ["Security Team"]
repository = "https://github.com/lsendel/rust-security"
readme = "README.md"
keywords = ["policy", "authorization", "security", "mvp"]
categories = ["web-programming::http-server", "authentication"]

[dependencies]
# Core MVP dependencies using workspace versions
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

# Policy engine dependencies
cedar-policy = { workspace = true }

# HTTP and tower dependencies
tower-http = { workspace = true, features = ["cors", "fs", "trace", "request-id"] }
utoipa = { workspace = true, features = ["axum_extras", "chrono"] }

# Environment and configuration
dotenvy = { workspace = true }

# Optional monitoring dependencies
prometheus = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true, default-features = false, features = ["json", "native-tls"] }
tempfile = { workspace = true }
futures = { workspace = true }
tower = { workspace = true, features = ["util"] }

[lib]
name = "policy_service"
path = "src/lib.rs"

[[bin]]
name = "policy-service"
path = "src/main.rs"

[features]
default = ["prom-client"]
prometheus-backend = ["dep:prometheus"]
prom-client = []
mvp-essential = ["prom-client"]
