[package]
name = "red-team-exercises"
version = "0.1.0"
edition = "2021"
description = "Red team security testing exercises and attack simulations"
authors = ["Security Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/company/rust-security"
keywords = ["security", "red-team", "penetration-testing", "cybersecurity"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[workspace]

[dependencies]
# Core async runtime with signal handling for graceful shutdown
tokio = { version = "1.37", features = ["full", "signal"] }
# HTTP client with rustls for better security
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"  # Keep local for specific version
anyhow = { version = "1.0" }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Security-focused dependencies with workspace versions
base64 = { version = "0.22" }
url = "2.5"  # Keep local version
urlencoding = "2.1"  # Keep local version
async-trait = { version = "0.1" }

# Command line and utilities
clap = "4.0"
colored = "2.1.0"  # Keep compatible version
tabular = "0.2"  # Keep local version

# Integration dependencies with security focus
config = { version = "0.14" }

# SIEM Integration dependencies - using HTTP clients for flexibility
# rdkafka = { version = "0.36", optional = true }
# rumqttc = { version = "0.24", optional = true }
# opentelemetry = { version = "0.22", optional = true }
# elasticsearch = { version = "8.5", optional = true }

[features]
# Default features for basic red team operations
default = ["basic-attacks"]

# Attack categories
basic-attacks = []
network-attacks = []
crypto-attacks = []
cloud-attacks = []
data-attacks = []
social-attacks = []

# SIEM Integration features - using HTTP-based integration
siem-integration = []
elastic-integration = ["siem-integration"]
splunk-integration = ["siem-integration"]
all-siem = ["elastic-integration", "splunk-integration"]

# Development and testing
benchmarks = []
all-attacks = ["network-attacks", "crypto-attacks", "cloud-attacks", "data-attacks", "social-attacks"]
full-security-platform = ["all-attacks", "all-siem"]

# Security-focused lints
[lints]
rust.unsafe_code = "forbid"
rust.unused_crate_dependencies = "warn"
clippy.unwrap_used = "deny"
clippy.expect_used = "deny"
clippy.panic = "deny"
clippy.integer_arithmetic = "warn"
clippy.indexing_slicing = "warn"

# Build profiles optimized for security
[profile.security]
inherits = "release"
debug = false
strip = true
panic = "abort"
overflow-checks = true
lto = true
codegen-units = 1

# Development dependencies
[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = { version = "0.4" }
tempfile = { version = "3.0" }
wiremock = { version = "0.6" }
criterion = { version = "0.5" }
