[package]
name = "security-features"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Security features module for authentication, encryption, and threat detection"
authors = ["Security Team"]
keywords = ["security", "authentication", "encryption", "threat-detection"]
categories = ["security"]
repository = "https://github.com/example/rust-security"
readme = "README.md"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]

[lints]
workspace = true