[package]
name = "axum-integration-example"
version = "0.1.0"
edition = "2021"
description = "Example integration with Axum web framework"

[lints]
workspace = true

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database dependencies
sqlx = { workspace = true, optional = true }

# Authentication dependencies
jsonwebtoken = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }

# Documentation dependencies
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

# Monitoring dependencies
prometheus = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-prometheus = { workspace = true, optional = true }

# Additional dependencies for enhanced features
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

# Common utilities
common = { path = "../../common" }

[features]
default = ["auth"]
postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/any"]
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/any"]
auth = ["dep:jsonwebtoken", "dep:bcrypt"]
docs = ["dep:utoipa", "dep:utoipa-swagger-ui"]
monitoring = ["dep:prometheus", "dep:metrics", "dep:metrics-prometheus"]
full = ["postgres", "sqlite", "auth", "docs", "monitoring"]

[dev-dependencies]
http-body-util = { workspace = true }
http = { workspace = true }
tokio-test = { workspace = true }
reqwest = { workspace = true }
