[package]
name = "simple-auth-client"
version = "0.1.0"
edition = "2021"
description = "Simple authentication client example"

[lints]
workspace = true

[dependencies]
common = { path = "../../common" }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }