[package]
name = "api-contracts"
version = "1.0.0"
edition = "2021"
description = "API contracts and versioning framework for Rust Security Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lsendel/rust-security"
keywords = ["api", "contracts", "versioning", "openapi", "security"]
categories = ["web-programming", "api-bindings", "development-tools"]

[features]
default = ["openapi", "tracing"]
openapi = ["utoipa", "utoipa-swagger-ui", "utoipa-rapidoc"]
tracing = ["opentelemetry", "tracing-opentelemetry"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# API documentation
utoipa = { version = "4.0", optional = true }
reqwest = { version = "0.11", features = ["json"] }
http = "1.0"

# Tracing and observability
tracing = "0.1"

# Validation
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
url = "2.4"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
rstest = "0.18"
