[package]
name = "input-validation"
version = "0.1.0"
edition = "2021"
description = "Comprehensive input validation and fuzzing framework for Rust Security Platform"
authors = ["Rust Security Platform Team"]
license = "MIT OR Apache-2.0"

[lints]
rust.unused_crate_dependencies = "warn"
rust.unused_imports = "warn"
rust.dead_code = "warn"
rust.unsafe_code = "forbid"
clippy.all = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.cargo = { level = "warn", priority = -1 }

[dependencies]
# Core dependencies
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.4"
regex = "1.11"
fancy-regex = "0.13"
anyhow = "1.0.82"

# Validation framework
validator = { version = "0.20", features = ["derive"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"

# Web framework integration
axum = { version = "0.7.4", features = ["macros"] }
http = "1.1"
bytes = "1.8"

# Security
secrecy = "0.10"
constant_time_eq = "0.3"
zeroize = "1.8"

# Performance
dashmap = "6.1"
rayon = { version = "1.10", optional = true }
indexmap = "2.11"

# String processing
aho-corasick = "1.1"

# Collections
bloomfilter = "1.0"
probabilistic-collections = "0.7"

# Fuzzing dependencies
arbitrary = { version = "1.4", features = ["derive"], optional = true }

# Rate limiting and DoS protection
tower = { version = "0.4.13", features = ["util"] }

# Metrics
prometheus = { version = "0.14", optional = true }

# Property testing
proptest = { version = "1.5", optional = true }
quickcheck = { version = "1.0", optional = true }

# Additional dependencies
fastrand = "2.2"
base64 = "0.21"
urlencoding = "2.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
quickcheck_macros = "1.0"
tempfile = "3.13"
criterion = { version = "0.5", features = ["html_reports"] }

# Fuzzing
arbitrary = "1.4"
libfuzzer-sys = "0.4"

[features]
default = ["validation", "sanitization", "rate-limiting"]
validation = []
sanitization = []
rate-limiting = []
fuzzing = ["arbitrary", "clap"]
property-testing = ["proptest", "quickcheck"]
performance = ["rayon"]
metrics = ["prometheus"]

[[bench]]
name = "validation_benchmarks"
harness = false

[lib]
name = "input_validation"
path = "src/lib.rs"

[[bin]]
name = "fuzz-runner"
path = "src/bin/fuzz_runner.rs"
required-features = ["fuzzing"]
