[package]
name = "rust-security-integration-tests"
version = "2.0.0"
edition = "2021"
description = "Comprehensive integration test suite for Rust Security Workspace"

[lints]
workspace = true

[[bin]]
name = "integration-tests"
path = "main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }

[dev-dependencies]
tokio-test = { workspace = true }
