[package]
name = "apt-detection"
version = "0.1.0"
edition = "2021"
description = "Advanced Persistent Threat Detection Engine"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.7"

# Data structures
dashmap = "6.1"
once_cell = "1.21"

# Metrics
prometheus = "0.14"

# Machine Learning
ndarray = "0.16"
statrs = "0.17"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.21"
tokio-test = "0.4"