[package]
name = "soar-engine"
version = "0.1.0"
edition = "2021"
description = "Security Orchestration, Automation and Response (SOAR) Engine"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"

# Web framework for API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.7"

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Message queue for orchestration
lapin = "2.5"
rdkafka = { version = "0.37", features = ["cmake-build", "libz", "ssl"] }

# Workflow engine
petgraph = "0.6"
daggy = "0.8"

# Security integrations
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
openssl = "0.10"
jsonwebtoken = "9.3"

# AI/ML for automated response
candle-core = "0.8"
candle-nn = "0.8"
ndarray = "0.16"
statrs = "0.17"

# Metrics and monitoring
prometheus = "0.14"
metrics = "0.24"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
dashmap = "6.1"
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.21"
mockito = "1.6"
tokio-test = "0.4"