[package]
name = "soar-engine"
version = "0.1.0"
edition = "2021"
description = "Security Orchestration, Automation and Response (SOAR) Engine"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"

# Web framework for API
axum = "0.7"

# Workflow engine
petgraph = "0.6"

# Metrics and monitoring
prometheus = "0.14"
async-trait = "0.1"
dashmap = "6.1"
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.21"
mockito = "1.6"
tokio-test = "0.4"
